<resources>
    <string name="app_name">Tile Swipe</string>
    <string name="main_activity_new_game_button">Start New Game</string>
    <string name="main_activity_resume_game_button">Resume Last Game</string>
    <string name="main_activity_stats_button">Statistics</string>
    <string name="main_activity_settings_button">Settings</string>
    <string name="back_dialog_positive_button">go back</string>
    <string name="back_dialog_negative_button">cancel</string>
    <string name="back_dialog_neutral_button">cancel</string>
    <string name="back_dialog_title">Are you sure you want to go back?</string>
    <string name="back_dialog_message">Progress will be saved.</string>
    <string name="puzzle_activity_back_button">back</string>
    <string name="puzzle_activity_time_text">time: </string>
    <string name="puzzle_activity_move_text">moves: </string>
    <string name="puzzle_start_new_game_button_text">Start new game</string>
    <string name="puzzle_start_resume_game_button_text">Resume previous game</string>
    <string name="puzzle_solved_dialog_text">Puzzle Solved!</string>
    <string name="puzzle_solved_dialog_time_text">time taken: </string>
    <string name="puzzle_solved_dialog_moves_text">move count: </string>
    <string name="settings_activity_delete_database_text">Delete Solve History</string>
    <string name="delete_database_confirmation_title">Are you sure?</string>
    <string name="delete_database_confirmation_message">This will reset your statistics and cannot be undone.</string>
    <string name="delete_database_confirmation_positive_button">Delete History</string>
    <string name="delete_database_confirmation_negative_button">Cancel</string>
    <string name="set_custom_image_text">Set Custom Image</string>
    <string name="set_custom_image_error_text">Read external storage permission needed</string>
    <string name="shared_preferences_key">com.example.tileswipe</string>
    <string name="custom_image_file_path">.</string>
    <string name="custom_image_file_name">user_image.png</string>
    <string name="settings_appearance_category_text">appearance</string>
    <string name="settings_general_category_text">general</string>
    <string name="settings_activity_remove_custom_image_text">Remove Custom Image</string>
    <string name="remove_custom_image_confirmation_title">Are you sure?</string>
    <string name="remove_custom_image_confirmation_positive_button">remove</string>
    <string name="remove_custom_image_confirmation_negative_button">cancel</string>
    <string name="remove_custom_image_confirmation_message">This will remove your custom image from the puzzle board.</string>
    <string name="puzzle_activity_show_image_not_available_text">Cannot show image as a custom image is not set.</string>
    <string name="change_puzzle_board_colors_text">Change Puzzle Board Colors</string>
    <string name="change_puzzle_border_color_text">border color:</string>
    <string name="change_tile_color_text">tile color:</string>
    <string name="change_number_color_text">number color:</string>
    <string name="color_picker_positive_button_text">confirm</string>
    <string name="color_picker_negative_button_text">cancel</string>
    <string name="change_color_reset_button_text">reset</string>
</resources>