<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/main_activity_buttons_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/start_new_game_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_activity_new_game_button" />

        <Button
            android:id="@+id/resume_last_game_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_activity_resume_game_button" />

        <Button
            android:id="@+id/statistics_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_activity_stats_button" />

        <Button
            android:id="@+id/settings_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_activity_settings_button" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>