<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/puzzle_solved_linear_layout"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="clip_horizontal|center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/puzzle_solved_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/puzzle_solved_dialog_text"
            android:textAlignment="center"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/puzzle_solved_dialog_time_text_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/puzzle_solved_time_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/puzzle_solved_dialog_time_text"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/puzzle_solved_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="12:29" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/puzzle_solved_dialog_moves_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/puzzle_solved_moves_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/puzzle_solved_dialog_moves_text"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/puzzle_solved_moves"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1" />
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>
